# PyCloudwave

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  example.py  instance.py  pyproject.toml
ci/docker-entrypoint-initdb.d/: README
docs/source/: conf.py
docs/source/modules/: connections.rst  cursors.rst
docs/source/user/: development.rst  examples.rst  resources.rst
pycloudwave/: __init__.py  _auth.py  charset.py  connections.py  converters.py  cursors.py  err.py  operations.py  optionfile.py  processresults.py  protocol.py
pycloudwave/constants/: CLIENT.py  COMMAND.py  ER.py  FIELD_TYPE.py
pycloudwave/tests/: __init__.py  base.py  test_DictCursor.py  test_SSCursor.py  test_basic.py  test_connection.py  test_converters.py  test_cursor.py  test_err.py  test_issues.py  test_load_local.py  test_nextset.py  test_optionfile.py
tests/: test_auth.py
